corrigido erros de syntax